samples/_failures_safe/1761161018_3aad7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96adf287.c: In function ‘main’:
./samples/SAFE/__tmp_96adf287.c:154:28: error: expected ‘;’ at end of input
  154 |         input_text[len - 1]
      |                            ^
      |                            ;
./samples/SAFE/__tmp_96adf287.c:154:9: error: expected declaration or statement at end of input
  154 |         input_text[len - 1]
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_96adf287.c:154:9: error: expected declaration or statement at end of input
